[ML] Fix alignment of filter icons in anomalies table

--- a/x-pack/plugins/ml/public/components/anomalies_table/_anomalies_table.scss
+++ b/x-pack/plugins/ml/public/components/anomalies_table/_anomalies_table.scss
@@ -53,8 +53,7 @@
 
     .filter-button {
       opacity: 0.3;
-      width: 20px;
-      padding-top: 2px;
+      min-width: 14px;
 
       .euiIcon {
         width: 14px;
@@ -102,16 +101,6 @@
         margin-top: 0px;
         flex-basis: 85%;
         font-size: inherit;
-      }
-
-      .filter-button {
-        height: 20px;
-        padding-top: 2px;
-
-        .euiButtonIcon__icon {
-          -webkit-transform: translateY(-7px);
-          transform: translateY(-7px);
-        }
       }
 
     }
